--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>evan-wiley-showcase</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>walkerwiley.com - Security Product Leader · AI Governance · Cloud</title>
+    <meta name="description" content="Evan Wiley - Security Product Leader specializing in AI Governance and Cloud Security" />
+    <meta name="author" content="Evan Wiley" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="alternate icon" href="/favicon.ico" />
 
     <meta property="og:title" content="evan-wiley-showcase" />
     <meta property="og:description" content="Lovable Generated Project" />
